# ComfyUI-mesh2motion

./: .gitignore  .gitmodules  README.md  __init__.py  package-lock.json  package.json  pyproject.toml  vite.config.mts
js/: main.js  main.js.map
js/assets/: main--7DZxL9o.css  main-BlVpZLBc.css  main-DrxKkeP_.css
locales/en/: main.json
locales/zh/: main.json
mesh2motion-ui/: create-comfyui.html  index-comfyui.html  retarget-comfyui.html
mesh2motion-ui/animations/: human-addon-animations.glb
mesh2motion-ui/animpreviews/human/: dark_Tired.webm  light_Tired.webm
mesh2motion-ui/assets/: create-B_DyJ5TT.js  create-C3rTGQpj.js  create-DqyTi76b.js  dialog-Bm5BuMR_.js  dialog-HUAJPeRX.css  dialog-L0iY14w_.css  dialog-uPTpjSkG.js  export-overlay-B8QR0yN3.css  export-overlay-CK8RYujY.js  export-overlay-CMhvV5Py.css  index-BcJoq2NO.js  index-D-Offkeb.js  index-DMEHPqVb.js  index-ZWTLa5OP.css  retarget-BJKsBcns.css  retarget-DPkZuE8i.js
mesh2motion-ui/models/: model-dinosaur.glb
mesh2motion-ui/rigs/: rig-fox.glb
src/: Root.vue  main.ts
src/components/: Mesh2MotionEditor.vue
